--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-﻿absl-py==2.1.0
+absl-py==2.1.0
 altair==5.4.1
 astroid==3.3.4
 asttokens==2.4.1
 astunparse==1.6.3
 attrs==24.2.0
+babel==2.16.0
 backcall==0.2.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
@@ -56,7 +57,7 @@ narwhals==1.8.3
 nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
-numpy==1.23.0
+numpy==1.26.4
 opt-einsum==3.3.0
 optree==0.12.1
 packaging==24.1
@@ -93,6 +94,9 @@ streamlit==1.38.0
 tenacity==8.5.0
 tensorboard==2.17.1
 tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+tensorflow-intel==2.17.0
+tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
 tinycss2==1.3.0
 toml==0.10.2
@@ -110,6 +114,4 @@ webencodings==0.5.1
 Werkzeug==3.0.4
 wrapt==1.16.0
 yarg==0.1.9
-setuptools
-wheel
-distlib
+setuptools==58.1.0
